--- a/Lab11 Exercise2/src/app/app.component.html
+++ b/Lab11 Exercise2/src/app/app.component.html
@@ -5,7 +5,4 @@
   </h1>
 </div>
 <h2>Student #985803: </h2>
-<app-counter counterValue="{{counter}}" (counterChange)="showOutputData($event)"></app-counter>
-<ul>
-    <li>Current counter: {{outputData}}</li>
-</ul>
+<app-counter counterValue="{{counter}}" ></app-counter>
