--- a/Lab11 Exercise3/src/app/app.component.html
+++ b/Lab11 Exercise3/src/app/app.component.html
@@ -7,5 +7,5 @@
 <h2>Student #985803: </h2>
 <app-counter counterValue="{{counter}}" (counterChange)="showOutputData($event)"></app-counter>
 <ul>
-    <li>Current counter: {{outputData}}</li>
+    <li>Current counter: {{ComponentCounterValue}}</li>
 </ul>
